# Weather-Data-Analysis-Pipeline

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
config/: __init__.py  settings.py
src/weather_pipeline/: __init__.py  cli.py
src/weather_pipeline/dashboard/: __init__.py  app.py
src/weather_pipeline/data_ingestion/: __init__.py  weather_api.py
src/weather_pipeline/data_processing/: __init__.py  cleaner.py  transformer.py
src/weather_pipeline/database/: __init__.py  connection.py  models.py
tests/: test_data_ingestion.py  test_data_processing.py  test_database.py
