[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-data-analysis-pipeline"
version = "0.1.0"
description = "A pipeline for ingesting, processing, and analyzing weather data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ash Sirha"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "flask>=3.0.0",
    "plotly>=5.17.0",
    "dash>=2.14.2",
    "marshmallow>=3.20.1",
    "jsonschema>=4.20.0",
    "schedule>=1.2.0",
    "loguru>=0.7.2",
    "scikit-learn>=1.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
]

[project.scripts]
weather-pipeline = "src.weather_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Ashsirha/Weather-Data-Analysis-Pipeline"
Repository = "https://github.com/Ashsirha/Weather-Data-Analysis-Pipeline"
Issues = "https://github.com/Ashsirha/Weather-Data-Analysis-Pipeline/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"